manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: t82107479-service
spec:
    ports:
    - port: 8080 
    selector:
        app: t82107479
